# ref_str

./: Cargo.toml  README.md  README_CN.md
.github/workflows/: ci.yml
src/: arch.rs  backend.rs  core.rs  lib.rs  raw.rs
src/arch/: encode.rs  layout.rs
tests/: integration.rs
