[package]
name = "ref_str"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Shao G. <shaogme@gmail.com>"]
repository = "https://github.com/shaogme/ref_str"
description = "Compressed borrowed-or-shared string types for no_std Rust."
readme = "README.md"
homepage = "https://github.com/shaogme/ref_str"
documentation = "https://docs.rs/ref_str"
keywords = ["no_std", "string", "arc", "rc", "compression"]
categories = ["no-std", "data-structures"]

[dependencies]
arbitrary = { version = "1", default-features = false, features = ["derive"], optional = true }
serde = { version = "1", default-features = false, features = ["alloc"], optional = true }

[dev-dependencies]
serde_test = "1"

[features]
arbitrary = ["dep:arbitrary"]
serde = ["dep:serde"]
std = ["serde?/std"]
